src/frameworks/Error Logger/main/objects/Error_Log_Event__e/Error_Log_Event__e.object-meta.xml
<CustomObject>
    <description>AP-86705: Create Salesforce platform events for creating error logs in salesforce.</description>
    <label>Error Log Event</label>
    <pluralLabel>Error Log Events</pluralLabel>
</CustomObject>