src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>AP-86705: Create Salesforce platform events for creating error logs in salesforce.</description>
    <label>Additional Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>