src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <description>The class/flow which was involved for this error.
PLANHUB-114531</description>
    <label>Caller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>