src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/DML_Exception_Details__c.field-meta.xml
<CustomField>
    <fullName>DML_Exception_Details__c</fullName>
    <description>AP-86705: Create Salesforce platform events for creating error logs in salesforce.</description>
    <label>DML Exception Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>