src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>AP-86705: Create Salesforce platform events for creating error logs in salesforce.</description>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>