src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/Http_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Http_Status_Code__c</fullName>
    <label>Http Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>