src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>AP-86705: Create Salesforce platform events for creating error logs in salesforce.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>