src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <description>AP-86705: Create Salesforce platform events for creating error logs in salesforce.</description>
    <label>Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>