src/frameworks/Error Logger/main/objects/Error_Log_Event__e/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Short description for the error, (e.g. OBR Submission Error: Create Request Failed: DUPLICATE_CUSTODIAN_ACCOUNT_ID) will be easy for reporting and querying.
PLANHUB-114531</description>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>